# SPDX-FileCopyrightText: 2022 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: MIT

[package]
name = "conserts-cli"
version = "0.1.6"
authors = ["Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
edition = "2018"

[lib]
path = "src/cli.rs"

[dependencies]
clap = "2.33.3"
color-eyre = { version = "0.5.11", default-features = false }
colored = "2.0.0"

conserts-compile = { path = "../conserts-compile" }
conserts-compose = { path = "../conserts-compose" }
conserts-elements = { path = "../conserts-elements" }
conserts-error = { path = "../conserts-error" }
conserts-parse = { path = "../conserts-parse" }
conserts-plot = { path = "../conserts-plot" }

[features]
default = ["conserts-compile/default"]
explorer = ["conserts-compile/explorer"]
