# SPDX-FileCopyrightText: 2022 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: MIT

[package]
name = "conserts-compile"
version = "0.1.6"
authors = ["Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
edition = "2018"

[dependencies]
askama = "0.11.0"
Inflector = "0.11.4"
proc-macro2 = "1.0.32"
quote = "1.0.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_derive = "1.0.130"
which = "4.2.2"

conserts-error = { path = "../conserts-error" }
conserts-plot = { path = "../conserts-plot" }
conserts-elements = { path = "../conserts-elements" }

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
default = []
explorer = []
