# SPDX-FileCopyrightText: 2022 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: MIT

[package]
name = "conserts-compose"
version = "0.1.6"
authors = ["Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
edition = "2018"

[dependencies]
conserts-elements = { path = "../conserts-elements" }
conserts-error = { path = "../conserts-error" }

[dev-dependencies]
conserts-parse = { path = "../conserts-parse" }
