# SPDX-FileCopyrightText: 2022 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: MIT

[package]
name = "conserts-elements"
version = "0.1.6"
authors = ["Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
edition = "2018"

[dependencies]
Inflector = "0.11.4"
regex = "1.5.5"
proc-macro2 = "1.0.32"
quote = "1.0.10"
serde = { version = "1.0.130", features = ["derive"] }
uom = {version = "0.31.0"}
conserts-error = { path = "../conserts-error" }

[dev-dependencies]
pretty_assertions = "1.0.0"
