# SPDX-FileCopyrightText: 2022 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: MIT

[package]
name = "conserts-error"
version = "0.1.6"
authors = ["Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
edition = "2018"

[lib]
path = "src/error.rs"

[dependencies]
askama = "0.11.0"
regex = "1.5.5"
roxmltree = "0.14.1"
serde_json = "1.0.68"
serde_yaml = "0.8"
thiserror = "1.0.30"
